--- a/images/manifest.json
+++ b/images/manifest.json
@@ -7,6 +7,64 @@
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
     "width" : 3264,
+    "id" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/boobies-raw2/canvas/",
+    "label" : {
+      "none" : [ "boobies-raw2" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/boobies-raw2/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/boobies-raw2/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 102,
+              "height" : 77
+            }, {
+              "width" : 204,
+              "height" : 153
+            }, {
+              "width" : 408,
+              "height" : 306
+            }, {
+              "width" : 816,
+              "height" : 612
+            }, {
+              "width" : 1632,
+              "height" : 1224
+            }, {
+              "width" : 3264,
+              "height" : 2448
+            } ],
+            "profile" : "level0",
+            "width" : 3264,
+            "id" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/boobies-raw2",
+            "type" : "ImageService3",
+            "@context" : "http://iiif.io/api/image/3/context.json",
+            "height" : 2448
+          } ],
+          "format" : "image/jpeg",
+          "width" : 3264,
+          "id" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/boobies-raw2/full/max/0/default.jpg",
+          "type" : "Image",
+          "height" : 2448
+        },
+        "target" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/boobies-raw2/canvas/"
+      } ]
+    } ],
+    "height" : 2448
+  }, {
+    "width" : 3264,
     "id" : "https://Neal-B-Johnson.github.io/IIIF-training-Neal-B-Johnson/images/crabs-raw/canvas/",
     "label" : {
       "none" : [ "crabs-raw" ]
